# rust-project-template

./: Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
