[package]
name = "rust-project-template"
version = "0.1.0"
edition = "2024"
authors = ["sterrlia <dev@sterrlia.com>"]
description = "Rust project template"
repository = "https://github.com/sterrlia/rust-project-template"
keywords = []
categories = []
readme = "README.md"
license-file = "LICENSE"
rust-version = "1.85.1"

[dependencies]
